# Election-Process-Education

./: .dockerignore  .env.example  .gcloudignore  .gitignore  API.md  Agent.md  Dockerfile  Guide.md  Plan.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_api.py  vitest.config.ts
app/: __init__.py  main.py
app/connectors/: data_gov_in.py  eci_results.py  eci_voter.py  google_civic.py  myneta.py  wiki.py
app/models/: schemas.py
app/routers/: chat.py  polling.py  sources.py  steps.py  timeline.py
app/services/: gemini.py  rag.py
app/tests/: test_main.py
backend/: main.py
backend/connectors/: eci_schedule.py  eci_voter.py  firestore.py  google_maps.py  lokdhaba.py
backend/models/: schemas.py
backend/routers/: chat.py  glossary.py  polling.py  quiz.py  sources.py  steps.py  timeline.py  user.py
backend/services/: cache.py  gemini.py  i18n.py  rag.py
scratch/: check_json.py  check_pos.py  check_pos_web.py  fix_imports.py  test_auth.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/__tests__/: page.test.tsx
src/app/glossary/: page.tsx
src/app/learn/: page.tsx
src/app/polling-lookup/: page.tsx
src/app/quiz/: page.tsx
src/app/registration/: page.tsx
src/components/: ChatWidget.tsx  Footer.tsx  Navbar.tsx
src/test/: setup.tsx
tests/: test_api.py
web/: chat.html  drawer.html  index.html  package-lock.json  package.json  tailwind.config.js  test_output.txt  tsconfig.app.json  vite.config.ts
web/coverage/: coverage-final.json  index.html
web/src/: App.tsx  index.css
(+45 files in other folders)
